# Pytuck

./: .gitignore  CHANGELOG.EN.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.EN.md  README.md  TODO.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: benchmark.yml  ci.yml
docs/changelog/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.6.1.md  0.6.2.md  0.6.3.md
examples/: README.md  _common.py  active_record_demo.py  all_engines_test.py  backend_options_demo.py  common.py  data_model_demo.py  json_impl_demo.py  migration_tools_demo.py  new_api_demo.py  relationship_demo.py  sqlalchemy20_api_demo.py  transaction_demo.py  type_validation_demo.py  typing_demo.py
pytuck/: __init__.py  exceptions.py  index.py  orm.py  session.py  storage.py  types.py
pytuck/backends/: __init__.py  backend_binary.py  backend_csv.py  backend_excel.py  backend_json.py  backend_sqlite.py  backend_xml.py  base.py  binary.py  binary_backend.py  csv_backend.py  excel_backend.py  json_backend.py  registry.py  sqlite_backend.py  versions.py  xml_backend.py
pytuck/common/: __init__.py  crypto.py  encrypted_zip.py  exceptions.py  options.py  types.py  typing.py  utils.py  zipcrypto.py
pytuck/connectors/: __init__.py  base.py  connector_sqlite.py  sqlite_connector.py
pytuck/core/: __init__.py  event.py  index.py  orm.py  prefetch.py  session.py  storage.py  types.py
pytuck/query/: __init__.py  builder.py  compiler.py  result.py  statements.py
pytuck/tools/: __init__.py  adapters.py  load_external.py  migrate.py
tests/: __init__.py  benchmark.py  conftest.py  test_active_record.py  test_all_engines.py  test_backend_csv_encryption.py  test_backend_excel_row_number.py  test_backend_metadata.py  test_binary_encryption.py  test_boundary_values.py  test_bulk_operations.py  test_column_name_mapping.py  test_configuration.py  test_count_rows.py  test_data_model.py  test_engines.py  test_error_recovery.py  test_event.py  test_exceptions.py  test_index.py  test_index_optimization.py  test_insert_issues.py  test_lazy_load.py  test_load_external.py  test_migrate_sqlite_native.py  test_native_sql_mode.py  test_no_pk.py  test_orm.py  test_prefetch.py  test_query_advanced.py  test_query_or.py  test_relationship.py  test_result_behavior.py  test_schema_sync.py  test_session_advanced.py  test_session_api.py  test_threading.py  test_transactions.py  test_type_validation.py  test_typing.py  (+1 more)
tests/benchmark/: __init__.py  benchmark.py  benchmark_encryption.py  benchmark_index.py
