[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytuck"
version = "0.7.0"
description = "Lightweight Python document database - No SQL, multi-engine, pluggable persistence"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "go9sky"}
]
maintainers = [
    {name = "go9sky"}
]
keywords = [
    "database",
    "orm",
    "nosql",
    "document-database",
    "python",
    "lightweight",
    "pytuck",
    "embedded-database",
    "key-value-store"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
json = []
orjson = ["orjson>=3.8.0"]
ujson = ["ujson>=5.5.0"]
csv = []
sqlite = []
excel = ["openpyxl>=3.0.0"]
xml = ["lxml>=4.9.0"]
all = ["openpyxl>=3.0.0", "lxml>=4.9.0", "orjson>=3.8.0", "ujson>=5.5.0"]
dev = [
    "pytest>=7.0.0",
    "mypy>=0.950",
    "build>=0.7.0",
    "twine>=4.0.0",
    "openpyxl>=3.0.0",
    "lxml>=4.9.0",
    "orjson>=3.8.0",
    "ujson>=5.5.0",
]

[project.urls]
Homepage = "https://github.com/Pytuck/Pytuck"
Documentation = "https://github.com/Pytuck/Pytuck#readme"
Repository = "https://github.com/Pytuck/Pytuck.git"
Issues = "https://github.com/Pytuck/Pytuck/issues"
Changelog = "https://github.com/Pytuck/Pytuck/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["pytuck", "pytuck.backends"]
include-package-data = true

[tool.setuptools.package-data]
pytuck = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# 排除 benchmark 目录
norecursedirs = ["benchmark", "__pycache__"]
addopts = "-v"
